--- a/src/theme/css/variables.css
+++ b/src/theme/css/variables.css
@@ -10,16 +10,16 @@
 /* Themes */
 
 .ayu {
-    --bg: hsl(210, 25%, 8%);
+    --bg: #1e1e1e; /*hsl(210, 25%, 8%);*/
     --fg: #c5c5c5;
 
-    --sidebar-bg: #14191f;
+    --sidebar-bg: #2e2e2e; /*#14191f;*/
     --sidebar-fg: #c8c9db;
     --sidebar-non-existant: #5c6773;
     --sidebar-active: #ffb454;
     --sidebar-spacer: #2d334f;
 
-    --scrollbar: var(--sidebar-fg);
+    --scrollbar: var(--sidebar-non-existant);
 
     --icons: #737480;
     --icons-hover: #b7b9cc;
